--- a/erdinc2024SEG/abstract.bib
+++ b/erdinc2024SEG/abstract.bib
@@ -4,3 +4,28 @@
   journal={Advances in Neural Information Processing Systems (NeurIPS)},
   year={2023}
 }
+
+@conference{rafaelkriging,
+	title = {Generative Seismic Kriging with Normalizing Flows},
+  author = {Rafael Orozco and Mathias Louboutin and Felix J. Herrmann},
+	journal = {Third International Meeting for Applied Geoscience and Energy (IMAGE)},
+	year = {2023},
+	url = {https://slimgroup.github.io/IMAGE2023/BayesianKrig/abstract.html},
+}
+
+@article{basdeep,
+	title = {Shortcutting inversion-based near-surface characterization workflows using deep learning},
+  author = {Bas Peters},
+	journal = {SEG Technical Program Expanded Abstracts 2020},
+	year = {2020},
+  doi = {10.1190/segam2020-3428431.1}
+}
+
+@article{bg,
+	title = {Building complex synthetic models to evaluate acquisition geometries and velocity inversion technologies},
+  author = {C. E. Jones, J. A. Edgar, J. I. Selvage, and H. Crook},
+	journal = {74th EAGE Conference and Exhibition Incorporating EUROPEC 2012},
+	year = {2012},
+  doi = {10.3997/2214-4609.20148575},
+  url = {https://www.earthdoc.org/content/papers/10.3997/2214-4609.20148575}
+}
