--- a/Yunlin_Zeng2024SEG/paper.bib
+++ b/Yunlin_Zeng2024SEG/paper.bib
@@ -34,3 +34,17 @@
       archivePrefix={arXiv},
       primaryClass={physics.geo-ph}
 }
+
+@article{Cranmer2020,
+   title={The frontier of simulation-based inference},
+   volume={117},
+   ISSN={1091-6490},
+   url={http://dx.doi.org/10.1073/pnas.1912789117},
+   DOI={10.1073/pnas.1912789117},
+   number={48},
+   journal={Proceedings of the National Academy of Sciences},
+   publisher={Proceedings of the National Academy of Sciences},
+   author={Cranmer, Kyle and Brehmer, Johann and Louppe, Gilles},
+   year={2020},
+   month=may, pages={30055–30062} }
+
