Extensive rewrite Felix

--- a/erdinc2024SEG/abstract.qmd
+++ b/erdinc2024SEG/abstract.qmd
@@ -1,5 +1,5 @@
 ---
-title: "Generative Geostatistical Modeling from Incomplete Field Observations and Data"
+title: "Generative Geostatistical Modeling from Incomplete Well and Imaged Seismic Observations"
 
 author:
   - name: Huseyin Tuna Erdinc
@@ -34,39 +34,43 @@ $$
 
 ## Abstract
 
-Diffusion generative models are emerging powerful frameworks for learning high-dimensional distributions and synthezing high-quality images. However, their efficacy in training predominantly hinges on the availability of complete, high-quality datasets, a condition that often proves unattainable, particularly in the domain related to subsurface velocity-model generation. In this work, we propose to synthesize subsurface velocities from incomplete models (limited field observations or wells) by integrating additional observation distortions during the training phase and formulating a supervised loss objective. 
-Our approach facilitates the generation of full velocity samples utilizing a dataset composed merely of seismic images and 5 wells per seismic image. Upon concluding the training process, our framework permits the generation of velocity samples from novel RTMs without the necessity for wells or incomplete velocity measurements.
+Diffusion generative models are emerging powerful frameworks for learning high-dimensional distributions and synthesizing high-quality images. However, their efficacy in training predominantly hinges on the availability of complete, high-quality training datasets, a condition that often proves unattainable, particularly in the domain related to subsurface velocity-model generation. In this work, we propose to synthesize proxy subsurface velocities from incomplete well and imaged seismic observations by integrating additional observation distortions during the training phase and formulating a supervised loss objective. (Are you doing this?????) In this context, proxy velocity models refer to random realizations of the subsurface velocities that are close in distribution to the actual subsurface velocities. These proxy models are used to train neural networks with simulation-based inference, which relies on having access to these samples. Our approach facilitates the generation of these proxy velocity samples by utilizing available datasets composed merely of seismic images and 5 (for now) wells per seismic image. After training, our foundation neural model permits the generation of velocity samples derived from novel RTMs without the need of having access to wells.
 
-## Method
+## Methodology
 
-Seismic velocity-model synthesis from incomplete measurements is an ill-posed problem, and acquiring comprehensive realistic datasets is costly. Generative models, particularly diffusion models, offer a solution by training conditional networks to synthesize plausible samples. These models approach synthesis through a denoising process, facilitating high-quality generation within high-dimensional spaces. Our work leverages diffusion models to construct velocities from limited well log information and thereby showcase their efficiency in generating geophysically sound velocity samples.
+Seismic velocity-model synthesis from incomplete measurements with Generative Geostatistical Modeling (GSM) is an ill-posed problem. In addition, acquiring comprehensive realistic velocity-model training datasets from seismic shot data through the process of full-waveform inversion proves to be too costly and unrealistic. Generative models, particularly diffusion models, offer a solution by training conditional networks to synthesize plausible samples, which we refer to as proxy models. After training, these proxy models are synthesized through a denoising process, facilitating high-quality high-dimensional sample generation. Our work leverages generative diffusion models by producing proxy velocity models from limited well-log and imaged seismic information. In negates the need of having access to fully-sampled velocity models. Well data provides the only incomplete access to the ground-truth velocity.
 
-For our training dataset, we utilize 2D proxy velocity slices (measuring 1600m in both depth and width) that reflect the geological characteristics of the Southern North Sea [@bg]. These models are derived from 3D imaged seismic and well-log data, featuring realistic heterogeneity. To simulate authentic field conditions, we apply a column-wise random masking ($\mathbf{A}$) to velocity slices leaving only 5 well per slice, resulting in approximately $\approx 98\%$ of the velocity information being obscured.Alongside, we generate seismic images from our velocity slices using Reverse Time Migration (RTM) and form a dataset that includes 3000 RTMs and a total of 15000 wells.
+(I had to rewrite this paragraph since it suggests we have access to the velocity model, which we do not. Also, the term proxy is already taken.)
 
-In our training process, the absence of complete velocity models precludes the use of a conventional L2 denoising loss formulation. Inspired by [@rafaelkriging] and [@ambient], our study adopts an alternative approach by introducing distortion into the already column-wise masked, and there for distorted, velocity models ($\mathbf{\hat{A}}$). This approach crafts a supervised learning objective, where the denoising model, conditioned on seismic images ($\mathbf{c}$), aims to perform both denoising and inpainting of missing pixels using the distorted and masked velocity models as input. Figure 1 illustrates the conceptual framework of the loss objective and specifies the inputs for the denoising network, which is charged with the generation of clean velocity models. The denoising model undergoes training over 20,000 iterations on 2 A100 GPUs for approximately 4 days.
+Unfortunately, this lack of fully-sampled velocity models precludes the use of traditional neural reconstruction methods that rely on having access to both sub- and fully-sampled training pairs (I asked to add reference to Kaust). Inspired by recent work by @rafaelkriging and @ambient (I asked you to include a reference to Bas. I hate having to ask this multiple times!!!!), our study adopts an alternative approach that relies on having access to distorted (read incomplete well-log data, denoted by the sampling operator $\mathbf{A}$), and artificially even more distorted (denoted by sampling operator $\mathbf{\widetilde{A}}$) well-log data. These distortions correspond to the action of binary masks with unity non-zero columns at locations where well-log data is available. The reconstruction of the fully-sampled proxy velocity models is conditioned on seismic images (denoted by the symbol $\mathbf{c}$). The proposed training concept is illustrated in @fig-sup and repeatedly involves: selection of a 2D seismic image, $\mathbf{c}$, intercepted by 5 well logs from which the distorted sampling mask, $\mathbf{A}$, the distorted well data, $\mathbf{y}$, are generated. Conditioned on this sampling mask, an artificially more distorted mask, $\mathbf{\widetilde{A}}$ (cf. the masks $\mathbf{A}$ and $\mathbf{\widetilde{A}}$ in @fig-sup) is generated. Given the action of the artificially-distorted mask on artificially noised and scaled complete well-log data, the neural network is trained to generate complete well-log data conditioned on the seismic image. Our network is trained by repeating this process over 20,000 iterations on 2 A100 GPUs involving a training dataset of XXX training samples.
+
+ <!-- introducing distortion into the already column-wise masked, and there for distorted, velocity models ($\mathbf{\widetilde{A}}$). This approach crafts a supervised learning objective, where the denoising model, conditioned on seismic images ($\mathbf{c}$), aims to perform both denoising and inpainting of missing pixels using the distorted and masked velocity models as input.  -->
 
 
-::: {#fig-sup }
+::: {#fig-sup}
 ![](figures/IMAGE2024_figure1_new.png)
 
-In the formulation of our training loss, field observations (RTMs and wells) along with column-wise masks ($\mathbf{A}$) are initially sampled. Following this, distortion masks ($\mathbf{\hat{A}}$) are generated, with their sampling conditioned upon the initial column-wise masks. The denoising model, informed of the distortion masks, noisy distorted well information and RTMs reconstructs the complete, noise-free velocity model. 
+Training-loss formulation: (Fix in figure) field observations (RTMs and wells) along with column-wise masks ($\mathbf{A}$) are sampled initially. Conditioned on these masks, artificial distortion masks ($\mathbf{\widetilde{A}}$) are generated. The neural denoising model, informed by the distortion masks, noisy distorted well information and RTMs, reconstructs the complete, noise-free velocity model. (Please fix notation with tilde, make y bold)
 :::
 
 ## Results
 
-In Figure 2, we present the performance of our generative model across two distinct examples. Using an unseen seismic image (RTM), our model synthesizes subsurface velocity without relying on well data, effectively executing a deconvolution operation. To validate the quality of our generation process, we compare the posterior means (derived from 200 samples) against the ground truth test velocity models, which remained entirely unseen during the training phase. We observe that posterior means can capture long range structures and produce meaningful velocity samples, evidenced by Structural Similarity Index (SSIM) scores of 0.88 and 0.91. Furthermore, we calculated the variance of the posterior samples that aligns closely with particular structures within the velocity models. We can conclude that our method is a promising option for generating realistic velocity models. Looking ahead, future directions include expanding our dataset across varied geological settings and advancing towards a foundational seismic-based velocity generative model.
+<!-- 
+For our training dataset, we utilize 2D proxy velocity slices (measuring 1600m in both depth and width) that reflect the geological characteristics of the Southern North Sea [@bg]. These models are derived from 3D imaged seismic and well-log data, featuring realistic heterogeneity. To simulate authentic field conditions, we apply a column-wise random masking ($\mathbf{A}$) to velocity slices leaving only 5 well per slice, resulting in approximately $\approx 98\%$ of the velocity information being obscured. Alongside, we generate seismic images from our velocity slices using Reverse Time Migration (RTM) and form a dataset that includes 3000 RTMs and a total of 15000 wells. -->
+
+@fig-unsup presents results of our generative model for two distinct unseen examples for the imaged reflectivity. Given these unseen seismic images (RTMs), our trained neural model synthesizes subsurface velocity models without relying on well data. To validate the quality of our generative samples, comparisons are made between between the posterior means (the average of 200 samples conditioned in the two RTMs) and unseen ground-truth test velocity models. Except for information at the well locations, these velocity models remained entirely unseen during the training and generative phase. From these comparisons, we observe that the posterior means can capture long range structures and produce visually meaningful velocity samples, evidenced by the Structural Similarity Index (SSIM) scores of 0.88 and 0.91. Furthermore, the conditional posterior variances align closely with particular structures within the velocity models, which.... (What is the conclusion from this). From these results, we conclude that our method conditioned on imaged seismic data is capable of producing high-fidelity samples from the underlying distribution for subsurface velocity models. These samples will serve to train our full-Waveform variational Inference via Subsurface Extensions (WISE, cite) framework. Looking ahead, future directions include expanding our dataset across varied geological settings, inclusion of prompts to guide the sample generation, all geared towards advancing on the road to a seismic-based foundation model for subsurface velocities.
 
 
-::: {#fig-unsup }
+::: {#fig-unsup}
 ![](figures/IMAGE2024_figure2_new.png)
 
-The denoising model is tested on two distinct, previously unseen velocity examples. For each case, we fed the corresponding RTM into the network and generated velocity samples (200 samples for each example). Subsequently, we computed both the posterior mean and variance. To assess the accuracy of our model, we included the SSIM score comparing the ground truth to the calculated posterior means.
+The denoising model is tested on two distinct, previously unseen seismic images. For each case, we fed the corresponding RTM into the network and generated velocity samples (200 samples for each example). Subsequently, we computed both the posterior mean and variance. To assess the accuracy of our model, we included the SSIM score comparing the ground-truth to the calculated posterior means.
 :::
  
 
 ## Significance
 
-We utilized diffusion models to synthesize realistic subsurface velocity samples. Unlike prior approaches dependent on entirely complete velocity datasets, our method achieves effective training with merely $\approx 2%$ of velocity information (well data) and corresponding Reverse Time Migrations (RTMs) for each velocity slice. Additionally, our model's sampling mechanism operates without the necessity for well data, conditioned solely on RTMs to generate velocity samples directly. The velocity samples produced by our technique are highly beneficial for subsequent tasks in reservoir engineering and other fields demanding the creation of various plausible velocity models. Additional material is available at https://slimgroup.github.io/IMAGE2024/.
+We utilized generative diffusion models to synthesize realistic subsurface velocity model samples. Unlike prior approaches dependent on fully sampled velocity model datasets, our method achieves training with merely $\approx 2%$ of velocity information derived from well data and corresponding Reverse Time Migrations (RTMs). After training is completed, our model's sampling mechanism operates without well data, conditioned solely on RTMs to generate velocity samples. The velocity samples produced by our technique are highly beneficial for subsequent tasks such as WISE, which rely on having access to high-fidelity samples of the distribution of subsurface velocity models.Additional material is available at https://slimgroup.github.io/IMAGE2024/.
 
 
 ## Acknowledgement {.appendix}
