include Felix edits

--- a/erdinc2024SEG/abstract.bib
+++ b/erdinc2024SEG/abstract.bib
@@ -29,3 +29,17 @@
   doi = {10.3997/2214-4609.20148575},
   url = {https://www.earthdoc.org/content/papers/10.3997/2214-4609.20148575}
 }
+
+@article{wang2024controllable,
+      title={Controllable seismic velocity synthesis using generative diffusion models}, 
+      author={Fu Wang and Xinquan Huang and Tariq Alkhalifah},
+      year={2024},
+      doi = {10.48550/arXiv.2402.06277},
+}
+
+@article{yin2023wise,
+  title={WISE: full-Waveform variational Inference via Subsurface Extensions},
+  author={Yin, Ziyi and Orozco, Rafael and Louboutin, Mathias and Herrmann, Felix J},
+  journal={arXiv preprint arXiv:2401.06230},
+  year={2023}
+}
