--- a/erdinc2024SEG/abstract.qmd
+++ b/erdinc2024SEG/abstract.qmd
@@ -34,23 +34,23 @@ $$
 
 ## Abstract
 
-Diffusion generative models are emerging powerful frameworks for learning high-dimensional distributions and synthesizing high-quality images. However, their efficacy in training predominantly hinges on the availability of complete, high-quality training datasets, a condition that often proves unattainable, particularly in the domain related to subsurface velocity-model generation. In this work, we propose to synthesize proxy subsurface velocities from incomplete well and imaged seismic observations by integrating additional observation distortions during the training phase. In this context, proxy velocity models refer to random realizations of the subsurface velocities that are close in distribution to the actual subsurface velocities. These proxy models are used to train neural networks with simulation-based inference, which relies on having access to these samples. Our approach facilitates the generation of these proxy velocity samples by utilizing available datasets composed merely of seismic images and 5 (for now) wells per seismic image. After training, our foundation neural model permits the generation of velocity samples derived from novel RTMs without the need of having access to wells.
+Diffusion generative models are emerging powerful frameworks for learning high-dimensional distributions and synthesizing high-fidelity images. However, their efficacy in training predominantly hinges on the availability of complete, high-quality training datasets, a condition that often proves unattainable, particularly in the domain of subsurface velocity-model generation. In this work, we propose to synthesize proxy subsurface velocities from incomplete well and imaged seismic observations by introducing additional observation distortions during the training phase. In this context, proxy velocity models refer to random realizations of subsurface velocities that are close in distribution to the actual subsurface velocities. These proxy models are used to train neural networks with simulation-based inference, which relies on having access to these samples. Our approach facilitates the generation of these proxy velocity samples by utilizing available datasets composed merely of seismic images and 5 (for now) wells per seismic image. After training, our foundation neural model permits the generation of velocity samples derived from novel RTMs without the need of having access to wells.
 
 ## Methodology
 
-Seismic velocity-model synthesis from incomplete measurements with Generative Geostatistical Modeling (GGM) is an ill-posed problem. In addition, acquiring comprehensive realistic velocity-model training datasets from seismic shot data through the process of full-waveform inversion proves to be too costly and unrealistic. Generative models, particularly diffusion models, offer a solution by training conditional networks to synthesize plausible samples, which we refer to as proxy models. After training, these proxy models are synthesized through a denoising process, facilitating high-quality high-dimensional sample generation. Our work leverages generative diffusion models by producing proxy velocity models from limited well-log and imaged seismic information. It negates the need of having access to fully-sampled velocity models. Well data provides the only incomplete access to the ground-truth velocity.
+Seismic velocity-model synthesis from incomplete measurements with Generative Geostatistical Modeling (GGM) is an ill-posed problem. In addition, acquiring comprehensive realistic velocity-model training datasets from seismic shot data through the process of full-waveform inversion proves to be too costly and unrealistic. Generative models, particularly diffusion models, offer a solution by training conditional neural networks to synthesize plausible samples, which we refer to as proxy models. After training, these proxy models are synthesized through a iterative denoising process, facilitating high-fidelity high-dimensional sample generation. Our work leverages generative diffusion models by producing proxy velocity models from limited well-log and imaged seismic information. It negates the need of having access to fully-sampled velocity models during training. Well data provides the only incomplete access to the ground-truth velocities.
 
-Unfortunately, this lack of fully-sampled velocity models precludes the use of traditional neural reconstruction methods that rely on having access to both sub- and fully-sampled training pairs [@wang2024controllable]. Inspired by recent work by @ambient, @rafaelkriging and @basdeep, our study adopts an alternative approach that relies on having access to distorted (incomplete well-log data, denoted by the sampling operator $\mathbf{A}$), and artificially even more distorted (denoted by sampling operator $\mathbf{\widetilde{A}}$) well-log data. These distortions correspond to the action of binary masks with unity non-zero columns at locations where well-log data is available. The reconstruction of the fully-sampled proxy velocity models is conditioned on seismic images (denoted by the symbol $\mathbf{c}$). The proposed training concept is illustrated in @fig-sup and repeatedly involves: selection of a 2D seismic image, $\mathbf{c}$, intercepted by 5 well logs from which the distorted sampling mask, $\mathbf{A}$, the distorted well data, $\mathbf{y}$, are generated. Conditioned on this sampling mask, an artificially more distorted mask, $\mathbf{\widetilde{A}}$ (cf. the masks $\mathbf{A}$ and $\mathbf{\widetilde{A}}$ in @fig-sup) is generated. Given the action of the artificially-distorted mask on artificially noised and scaled complete well-log data, the neural network is trained to generate complete well-log data conditioned on the seismic image. Our network is trained by repeating this process over 20,000 iterations on 2 A100 GPUs involving a training dataset of 6000 training samples.
+Unfortunately, this lack of fully-sampled velocity models precludes the use of traditional neural reconstruction methods that rely on having access to both sub- and fully-sampled training pairs [@wang2024controllable]. Inspired by recent work by @ambient, @rafaelkriging and @basdeep, our study adopts an alternative approach that relies on having access to distorted (incomplete well-log data, denoted by the sampling operator $\mathbf{A}$), and artificially even more distorted (denoted by sampling operator $\mathbf{\widetilde{A}}$) well-log data. These distortions correspond to the action of binary masks with unity non-zero columns at locations where well-log data is available. The reconstruction of the fully-sampled proxy velocity models is conditioned on seismic images (denoted by the symbol $\mathbf{c}$). The proposed training concept is illustrated in @fig-sup and repeatedly involves: selection of a 2D seismic image, $\mathbf{c}$, intercepted by 5 well logs from which the distorted sampling mask, $\mathbf{A}$, the distorted well data, $\mathbf{y}$, are generated. Conditioned on this sampling mask, an artificially more distorted mask, $\mathbf{\widetilde{A}}$ (cf. the masks $\mathbf{A}$ and $\mathbf{\widetilde{A}}$ in @fig-sup) is generated. Given the action of the artificially-distorted mask on artificially noised and scaled complete well-log data, the neural network is trained to fit the complete well-log data conditioned on the seismic image. Our network is trained by repeating this process over 20,000 iterations on 2 A100 GPUs involving a training dataset of 6000 training samples.
 
 ::: {#fig-sup}
 ![](figures/IMAGE2024_figure1_new.png)
 
-Training-loss formulation: field observations (RTMs and wells) along with column-wise masks ($\mathbf{A}$) are sampled initially. Conditioned on these masks, artificial distortion masks ($\mathbf{\widetilde{A}}$) are generated. The neural denoising model, informed by the distortion masks, noisy distorted well information and RTMs, reconstructs the complete, noise-free velocity model.
+Training-loss formulation: field observations (RTMs and wells) along with column-wise masks ($\mathbf{A}$) are sampled initially. Conditioned on these masks, artificial distortion masks ($\mathbf{\widetilde{A}}$) are generated. The neural denoising model $h_\theta$, informed by the distortion masks, noisy distorted well information and RTMs, is trained to reconstruct the complete, noise-free velocity model.
 :::
 
 ## Results
 
-@fig-unsup presents results of our generative model for two distinct unseen examples for the imaged reflectivity. Given these unseen seismic images (RTMs), our trained neural model synthesizes subsurface velocity models without relying on well data. To validate the quality of our generative samples, comparisons are made between the posterior means (the average of 200 samples conditioned in the two RTMs) and unseen ground-truth test velocity models. These velocity models remained entirely unseen during the training and generative phase. From these comparisons, we observe that the posterior means can capture long range structures and produce visually meaningful velocity samples, evidenced by the Structural Similarity Index (SSIM) scores of 0.88 and 0.91. Furthermore, the conditional posterior variances align closely with particular structures within the velocity models, which underscores the generative model's capacity to accurately reflect underlying geological heterogeneities. From these results, we conclude that our method conditioned on imaged seismic data is capable of producing high-fidelity samples from the underlying distribution for subsurface velocity models. These samples will serve to train our full-Waveform variational Inference via Subsurface Extensions (WISE) framework [@yin2023wise]. Looking ahead, future directions include expanding our dataset across varied geological settings, inclusion of prompts to guide the sample generation, all geared towards advancing on the road to a seismic-based foundation model for subsurface velocities.
+@fig-unsup presents results of our generative model for two distinct unseen examples for the imaged reflectivity. Given these unseen seismic images (RTMs), our trained neural model synthesizes subsurface velocity models without relying on well data. To validate the quality of our generative samples, comparisons are made between the posterior means (the average of 200 samples conditioned in the two RTMs) and unseen ground-truth test velocity models. These velocity models remained entirely unseen during the training and generative phase. From these comparisons, we observe that the posterior means can capture long range structures and produce visually meaningful velocity samples, evidenced by the Structural Similarity Index (SSIM) scores of 0.88 and 0.91. Furthermore, the conditional posterior variances align closely with particular structures within the velocity models, which underscores the generative model's capacity to accurately reflect underlying geological heterogeneity. From these results, we conclude that our method conditioned on imaged seismic data is capable of producing high-fidelity samples from the underlying distribution for subsurface velocity models. These samples will serve as input to our full-Waveform variational Inference via Subsurface Extensions (WISE) framework [@yin2023wise]. Looking ahead, future directions include expanding our dataset across varied geological settings, inclusion of prompts to guide the sample generation, all geared towards advancing on the road to a seismic-based foundation model for subsurface velocities.
 
 ::: {#fig-unsup}
 ![](figures/IMAGE2024_figure2_new.png)
