--- a/Rex2024SEG/paper.qmd
+++ b/Rex2024SEG/paper.qmd
@@ -20,7 +20,7 @@ Common-image gathers (CIGs) are pivotal in migration-velocity analysis (MVA). Ho
 
 ## Methodology
 
-We conduct a case study on a 2D slice of the Compass model. We generate observed data with 256 sources and 64 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism. For a given migration-velocity model, CIGs are computed. To train the network to generate CIGs for new migration-velocity models without remigration, 500 new migration-velocity models (Figure 1 (b)) are generated and used to generate CIGs to form our training dataset (Figure 1 (c)). Given these models and CIGs, a FNO is to trained to map $1)$ initial migration-velocity model, $2)$ its CIG, and $3)$ target migration-velocity models, to the CIGs associated with the target migration-velocity models (Figure 1 (d)).
+We conduct a case study on a 2D slice of the Compass model. We generate observed data with 256 sources and 32 ocean bottom nodes, using a Ricker wavelet with central frequency of 0.015 Hz. We assume absorbing boundaries in our study. We add uncorrelated band-limited noise with an SNR of 12 dB for realism. For a given migration-velocity model, CIGs are computed. To train the network to generate CIGs for new migration-velocity models without remigration, 500 new migration-velocity models (Figure 1 (b)) are generated and used to generate CIGs to form our training dataset (Figure 1 (c)). Given these models and CIGs, a FNO is to trained to map $a)$ initial migration-velocity model, $b)$ its CIG, and $c)$ target migration-velocity models, to the CIGs associated with the target migration-velocity models (Figure 1 (d)).
 
 ::: {#fig-unsup}
 ![](figures/workflow.001.jpeg){width="90%"}
