--- a/orozco2024SEG/paper.qmd
+++ b/orozco2024SEG/paper.qmd
@@ -1,5 +1,5 @@
 ---
-title: "BEACON: **B**ayesian **E**xperimental design **A**cceleration with **CO**nditional **N**ormalizing flows: case study in optimal monitor well placement for CO2 sequestration"
+title: "BEACON: **B**ayesian **E**xperimental design **A**cceleration with **CO**nditional **N**ormalizing flows: case study in optimal monitor well placement for CO~2~ sequestration"
 author:
   - name:
       Rafael Orozco^1, Abhinav Gahlot, Felix J. Herrmann^1^ \
@@ -10,18 +10,20 @@ bibliography: paper.bib
 
 ## Abstract
 
-CO2 sequestration is a crucial engineering solution for mitigating climate change. However, the uncertain nature of reservoir geologies, necessitates rigorous monitoring of CO2 plumes to prevent risks such as leakage, induced seismicity, or breaching licensed boundaries. To address this, project managers use borehole wells for direct CO2 and pressure monitoring at specific locations. Given the high costs associated with drilling, it is crucial to strategically place a limited number of wells to ensure effective monitoring within budgetary constraints. Our approach integrates fluid flow solvers for forecasting plume trajectories with generative networks for plume inference uncertainty. Our methodology is extensible to three-dimensional domains and is developed within a Bayesian framework for optimal experimental design, ensuring scalability and mathematical optimality. We use a realistic case study to verify both of these claims by demonstrating our method's application in a large scale domains and optimality as compared to baseline well placement.
+CO~2~ sequestration is a crucial engineering solution for mitigating climate change. However, the uncertain nature of reservoir properties, necessitates rigorous monitoring of CO~2~ plumes to prevent risks such as leakage, induced seismicity, or breaching licensed boundaries. To address this, project managers use borehole wells for direct CO~2~ and pressure monitoring at specific locations. Given the high costs associated with drilling, it is crucial to strategically place a limited number of wells to ensure maximally effective monitoring within budgetary constraints. Our approach integrates fluid-flow solvers for forecasting plume trajectories with generative neural networks for plume inference uncertainty. Our methodology is extensible to three-dimensional domains and is developed within a Bayesian framework for optimal experimental design, ensuring scalability and mathematical optimality. We use a realistic case study to verify both of these claims by demonstrating our method's application in a large scale domains and optimality as compared to baseline well placement.
 
 ## Methods
-We guide the optimal placement of wells through the Bayesian principle of: drilling at locations that provide most information gain as compared to our prior knowledge of the plume. This principle is expressed numerically as the expected information gain (EIG) and defined as the distributional difference (measured by the Kullback-leibler divergence) between the prior and the posterior  conditioned on data acquired from the wells. Due to the maximum-likelihood training objective of normalizing flows they directly measure the Kullback-leibler divergence thus are naturally equipped to solve the optimal placement problem. Moreover, we interpret optimal locations not as fixed points but as probabilistic densities that suggest areas with a higher likelihood of drilling (ref eric). To create the training examples, we use physics solvers to propagate the current knowledge of the plume (expressed as a fixed set of samples) to forecasts that account for the inherent uncertainties in estimated subsurface permeability and porosity.  After training, our algorithm has two outputs: a probabilistic density for the optimal well placement \mathbf{\hat M} and an amortized generative network capable of generating samples of the unknown plume given the field observations drilled as per \mathbf{\hat M}. We also provide imaged seismic as inputs to the network but we do not perform their optimal placement (left for future work). We name our algorithm BEACON: **B**ayesian **E**xperimental design **A**cceleration with **CO**nditional **N**ormalizing flows
+
+We guide the optimal placement of wells through the Bayesian principle of: drilling at locations that provide most information gain as compared to our prior knowledge of the plume. This principle is expressed numerically as the expected information gain (EIG) and defined as the distributional difference (measured by the Kullback-leibler divergence) between the prior and the posterior conditioned on data acquired from the wells. Due to the maximum-likelihood training objective of normalizing flows, they directly measure the Kullback-leibler divergence thus are naturally equipped to solve the optimal well-placement problem. Moreover, we interpret optimal locations not as fixed points but as probabilistic densities that suggest areas with a higher likelihood of drilling (ref eric)!!!!!. To create the training examples, we use physics solvers to propagate the current knowledge of the plume (expressed as a fixed set of samples) to forecasts that account for the inherent uncertainties in estimated subsurface permeability and porosity.???  After training, our algorithm has two outputs: a probabilistic density for the optimal well placement \mathbf{\hat M} and an amortized generative network capable of generating samples of the unknown plume given the field observations drilled as per \mathbf{\hat M}. We also provide imaged seismic as inputs to the network but we do not perform their optimal placement (left for future work). We name our algorithm BEACON: **B**ayesian **E**xperimental design **A**cceleration with **CO**nditional **N**ormalizing flows, which is part of an-uncertainty aware Digital Twin developed in our group.
 
 ## Results
-We design our algorithm to evolve alongside the CO2 sequestration project's lifecycle. This adaptability is achieved through integration into a digital twin workflow (cite), which enables continuous refinement of well placement strategies based on incoming field observations. Figure 1 illustrates a single iteration, starting with prior samples of the plume and culminating in the generation of posterior samples post-observation at newly drilled optimal wells. This process is iterative, with posterior distributions from one cycle becoming the priors for the subsequent cycle. In our synthetic case study, we employed realistic permeability models derived from the Compass dataset (cite). We juxtaposed our optimized well placements against a set of randomly selected well locations. The results, depicted in Figure 2, show the benefits of our approach: not only reduced the uncertainty in plume inferences but also consistently lower error rates in comparison to the baseline. This highlights the value of our algorithm BEACON for well placement to enhance the monitoring and management of CO2 sequestration projects.
+
+We design our algorithm to evolve alongside the CO~2~ sequestration project's lifecycle. This adaptability is achieved through integration into a Digital Twin workflow (cite), which enables continuous refinement of well placement strategies based on incoming field observations. Figure 1 illustrates a single iteration, starting with prior samples of the plume and culminating in the generation of posterior samples post-observation at newly drilled optimally located wells. This process is iterative, with posterior distributions from one cycle becoming the priors for the subsequent cycle. In our synthetic case study, we employed realistic samples for the permeability models derived from the Compass dataset (cite). We juxtaposed our optimized well placements against a set of randomly selected well locations. The results, depicted in Figure 2, show the benefits of our approach: not only is the uncertainty in plume inferences reduced but consistently lower error rates in comparison to the baseline are also obtained. This highlights the value of our algorithm BEACON for well placement to enhance the monitoring and management of CO~2~ sequestration projects.
 
 ::: {#fig-workflow}
 ![](./figs/workflow.png){width=99%}
 
-BEACON workflow integrated to digital twin for CO2 sequestration monitoring.
+BEACON workflow integrated to digital twin for CO~2~ sequestration monitoring.
 :::
 
 ::: {#fig-results}
